feat: adiciona os módulos de autenticação e scrapper
Atualiza a biblioteca base do projeto.
