# core/modules/auth/dto/auth.dto.go
@@ -1,0 +1,6 @@
+package auth_dto
+
+type LoginRequestDto struct {
+	Login string `json:"login" validator:"required"`
+	Senha string `json:"senha" validator:"required"`
+}
