# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Documentação do melhor chatbot do mundo",
+        "description": "Documentação do melhor chatbot do mundo2",
         "title": "Minha API",
         "contact": {},
         "version": "0.0.1"
@@ -9,9 +9,9 @@
     "host": "localhost:4000",
     "basePath": "/",
     "paths": {
-        "/hello-world": {
-            "get": {
-                "description": "Obtém um hello world mt bacana",
+        "/cadastrar": {
+            "post": {
+                "description": "Eu acho que cadastra um usuário",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,24 +19,60 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Tag de Exemplos"
+                    "Autenticação"
                 ],
-                "summary": "Rota de exemplo licor :D",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                "summary": "Cadastra um usuário",
+                "parameters": [
+                    {
+                        "description": "User credentials",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/auth_dto.LoginRequestDto"
                         }
                     }
+                ],
+                "responses": {}
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "Recebe login e senha para autenticar",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Autenticação"
+                ],
+                "summary": "Autentica um usuário",
+                "parameters": [
+                    {
+                        "description": "User credentials",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth_dto.LoginRequestDto"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "auth_dto.LoginRequestDto": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "senha": {
+                    "type": "string"
                 }
             }
         }
